--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+#visual studio code gitignore
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+.vscode
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
